force-app/main/default/objects/Message_Received__e/Message_Received__e.object-meta.xml
<CustomObject>
    <description>Evento publicado después de guardar un mensaje entrante para iniciar la automatización de Agentforce.</description>
    <label>Message Received</label>
    <pluralLabel>Messages Received</pluralLabel>
</CustomObject>