force-app/main/default/objects/Message_Received__e/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>