force-app/main/default/objects/Message_Received__e/fields/Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Message_Id__c</fullName>
    <label>Message ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>