force-app/main/default/objects/Message_Received__e/fields/Participant_Id__c.field-meta.xml
<CustomField>
    <fullName>Participant_Id__c</fullName>
    <label>Participant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>